--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "obsidian-sample-plugin",
+  "name": "obsidian-daily-activity",
   "version": "0.9.7",
-  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
-  "main": "main.js",
+  "description": "This is a plugin for Obsidian (https://obsidian.md). It inserts a list of links to files created or modified today to the file open in the editor.",
+  "main": "build/main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
     "build": "rollup --config rollup.config.js"
@@ -14,10 +14,14 @@
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^14.14.2",
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
     "rollup": "^2.32.1",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "moment": "^2.29.1"
   }
 }
