--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-# Intellij
-*.iml
-.idea
-
 # npm
 node_modules
 package-lock.json
+npm-debug.log
 
 # build
-main.js
-*.js.map
+build/main.js
+**/*.js.map
+debug.log
