--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
 	"id": "daily-activity",
 	"name": "Daily Activity",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"minAppVersion": "0.9.12",
 	"description": "This outputs a list of the files changed/created today in the active file",
 	"author": "Trevor Rydalch",
-	"authorUrl": "https://obsidian.md/about",
+	"authorUrl": "https://github.com/trydalch",
 	"isDesktopOnly": false
 }
