--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "id": "daily-activity",
-  "name": "Obsidian Activity",
+  "name": "Daily Activity",
   "version": "0.1.0",
   "minAppVersion": "0.9.12",
   "description": "A collection of commands to track your writing activity.",
