--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "obsidian-daily-activity",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "This is a plugin for Obsidian (https://obsidian.md).",
   "main": "build/main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
     "cpd": "cp ./build/dev-manifest.json ./build/manifest.json",
     "cp": "cp manifest.json ./build",
-    "build": "rollup --config rollup.config.js",
-    "dev-build": "npm run cp && rollup --config rollup.config.js",
+    "build": "npm run cp && rollup --config rollup.config.js",
+    "dev-build": "npm run cpd && rollup --config rollup.config.js",
     "dev-deploy": "cp -r ./build/* $OBSPLUGINDIR/dev-daily-activity",
     "bd": "npm run dev-build  && npm run cpd && npm run dev-deploy"
   },
