--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,58 +1,43 @@
 # @format
 
+name: Release Obsidian plugin
+
 on:
   push:
     tags:
-      - '*'
-
-name: Create Release
+      - "*"
 
 jobs:
   build:
-    name: Create Release
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [15.x]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{matrix.node-version}}
-      - run: npm install
-      - run: npm run build
+          node-version: '18.x'
+          
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Build plugin
+        run: npm run build
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          draft: false
-          prerelease: false
-      - name: Upload main.js
-        id: upload-mainjs
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/main.js
-          asset_name: main.js
-          asset_content_type: text/javascript
-      - name: Upload manifest.json
-        id: upload-manifestjson
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./manifest.json
-          asset_name: manifest.json
-          asset_content_type: application/json
+        run: |
+          tag="${GITHUB_REF#refs/tags/}"
+          
+          # Create a release
+          gh release create "$tag" \
+            --title="Version $tag" \
+            --draft=false \
+            --prerelease=false \
+            --generate-notes \
+            build/main.js \
+            manifest.json \
+            $([ -f styles.css ] && echo "styles.css") \
+            versions.json
