--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "dev-build": "npm run cpd && rollup --config rollup.config.js",
     "dev-deploy": "shx cp -r ./build/* ./test-vault/.obsidian/plugins/dev-daily-activity",
     "bd": "npm run dev-build && npm run cpd && npm run dev-deploy",
-    "test-vault": "obsidian test-vault"
+    "test-vault": "obsidian test-vault",
+    "version": "node version-bump.mjs && git add manifest.json versions.json",
+    "release": "npm run build && npm version patch -m \"Release version %s\" && git push --follow-tags",
+    "release-minor": "npm run build && npm version minor -m \"Release version %s\" && git push --follow-tags",
+    "release-major": "npm run build && npm version major -m \"Release version %s\" && git push --follow-tags"
   },
   "config": {
     "plugin_dir": "C:\\Users\\Trevor.Rydalch\\OneDrive\\Documents\\Obsidian Vaults\\plugin test\\plugin test\\.obsidian\\plugins"
@@ -23,6 +27,8 @@
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
+    "@types/better-sqlite3": "^7.6.9",
+    "@types/lodash": "^4.17.16",
     "@types/moment": "^2.13.0",
     "@types/node": "^14.14.2",
     "cross-env": "^7.0.3",
@@ -33,6 +39,8 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "chrono-node": "^2.2.1"
+    "better-sqlite3": "^9.4.3",
+    "chrono-node": "^2.2.1",
+    "lodash": "^4.17.21"
   }
 }
