--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/moment": "^2.13.0",
     "@types/node": "^14.14.2",
     "cross-env": "^7.0.3",
-    "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
+    "obsidian": "^1.8.7",
     "rollup": "^2.32.1",
     "shx": "^0.3.4",
     "tslib": "^2.0.3",
